--- a/README
+++ b/README
@@ -1,2 +1,11 @@
 Just a simple dsl for criteria and hql with scala. 
 
+Just some examples:
+
+1) session.from(classOf[User]).where("age" >= 20).and("name" like "alberto").asList[User]
+
+2) session.from(classOf[Address]).join("user").where("user.name" equal "alberto2").asList[Address]
+
+3) session.from(classOf[Address]).join("user").where("user.name" equal "alberto2").and("user.age" >= 20).asList[Address]
+
+4) session.query("from User where name=:name and age =:age").withParams("name" -> "alberto","age" -> alberto.getAge).asList[User]
