--- a/README
+++ b/README
@@ -19,14 +19,18 @@ Just some examples of type safe way:
 val user = new User
 val address = new Address 
 
-1)session.from[User].orderBy(lift(user.getName).asc).orderBy(lift(user.getAge).desc).asList[User]
+	session.from[User].orderBy(_.getName)
+	session.from[User].orderBy(_.getName).asc
+	session.from[User].orderBy(_.getName).asc.orderBy(_.getAge).desc
+	
+	session.from[User].orderBy(lift(user.getName).asc).orderBy(lift(user.getAge).desc).asList[User]
 
-2) session.from[User].where(lift(user.getAge) >= 20).and(lift(user.getName) like "alberto").asList[User]
+	session.from[User].where(lift(user.getAge) >= 20).and(lift(user.getName) like "alberto").asList[User]
 
-3) session.from[Address].join(lift(address.getUser)).where(lift(address.getUser.getName) equal "alberto2").asList[Address]
+	session.from[Address].join(lift(address.getUser)).where(lift(address.getUser.getName) equal "alberto2").asList[Address]
 
-4) session.from[Address].join(lift(address.getUser)).where(lift(address.getUser.getName) equal "alberto2").and(lift(address.getUser.getAge) >= 20).asList[Address]
+	session.from[Address].join(lift(address.getUser)).where(lift(address.getUser.getName) equal "alberto2").and(lift(address.getUser.getAge) >= 20).asList[Address]
 
-5) session.query("from User where name=:name and age =:age").withParams("name" -> "alberto","age" -> alberto.getAge).asList[User]
+	session.query("from User where name=:name and age =:age").withParams("name" -> "alberto","age" -> alberto.getAge).asList[User]
 
-6) session.from[User].where.hasMany(lift(user.getAddresses)).asList[User]
+	session.from[User].where.hasMany(lift(user.getAddresses)).asList[User]
